<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">

        <com.example.ncpmap.view.FunctionView
            android:id="@+id/function_global"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:functionName="@string/function_global"
            app:functionExra="@string/function_local"
            app:functionIcon="@drawable/ic_hospital"
            android:background="@drawable/bg_item_function"
            android:elevation="2dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/function_game"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/bg_item_function"
            android:elevation="3dp"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:clickable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:text="@string/function_game"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/grey"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:text="@string/function_game_exra"
                android:textColor="#708090"
                android:textSize="15sp"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:id="@+id/function_local"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/bg_item_function"
            android:elevation="3dp"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:clickable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:text="@string/function_local"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/grey"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:text="@string/function_local_exra"
                android:textColor="#708090"
                android:textSize="15sp"
                android:gravity="center"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
